--- a/tex/kapitel/abkuerzungen.tex
+++ b/tex/kapitel/abkuerzungen.tex
@@ -1,6 +1,10 @@
 % Die längste Abkürzung kann in die eckigen Klammern
 % bei \begin{acronym} geschrieben, um einen hässlichen
 % Umbruch zu verhindern
-\begin{acronym}[ROS]
+\begin{acronym}[URDF]
 \acro{ROS}{Robot Operating System}
+\acro{LTS}{Long-term support}
+\acro{URDF}{Unified Robot Description Format}
+\acro{STL}{STereoLithographie}
+\acro{Xacro}{XML Macros}
 \end{acronym}
