--- a/tex/kapitel/abkuerzungen.tex
+++ b/tex/kapitel/abkuerzungen.tex
@@ -7,4 +7,5 @@
 \acro{URDF}{Unified Robot Description Format}
 \acro{STL}{STereoLithographie}
 \acro{Xacro}{XML Macros}
+\acro{ODE}{Open Dynamics Engine}
 \end{acronym}
