nur noch 1 grundlagenkapitel dann gehts weiter

--- a/tex/kapitel/kapitel_1_einleitung.tex
+++ b/tex/kapitel/kapitel_1_einleitung.tex
@@ -19,7 +19,7 @@ Als Simulationsumgebung bietet sich Gazebo an, da Gazebo eine Physik-Engine bere
 
 \section{Aufbau der Arbeit}
 
-Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners in das \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf Koordinatensysteme, direkte und inverse Kinematik sowie Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie \ac{ROS}, Gazebo und MeshLab vorgestellt.
+Die Arbeit beginnt in \autoref{kap2} mit den Grundlagen, die für die Portierung des Laufplaners in das \ac{ROS} und Gazebo nötig sind. Dabei geht die Arbeit auf den Laufroboter, auf Koordinatensysteme, direkte und inverse Kinematik sowie Grundlagen zur Laufplanung ein. Außerdem werden die benötigten Frameworks wie \ac{ROS} und Gazebo vorgestellt.
 
 Nach den Grundlagen folgt in \autoref{kap3} die konzeptionelle Darstellung des Algorithmus Random Sampling, welcher zur Laufplanung genutzt werden soll. Zunächst wird der Algorithmus mit weiteren Algorithmen verglichen und dann detailliert erklärt. Das Kapitel geht darauf ein, wie gültige Lösungen generiert, aber auch bewertet werden können.
 
