--- a/tex/kapitel/kapitel_2_grundlagen.tex
+++ b/tex/kapitel/kapitel_2_grundlagen.tex
@@ -158,7 +158,7 @@ Des Weiteren gibt es für einige Standardbefehle aus Linux Wrapper-Funktionen wi
 \begin{figure}[t!]
   \centering
   \includegraphics[height=8cm]{kapitel2/urdtographizakrobat}
-  \caption{Darstellung des Transformationsbaums des Akrobat}
+  \caption{Darstellung des Transformationsbaums des Akrobats}
   \label{Kap2:urdtographizakrobat}
 \end{figure}
 
